# wordle

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  flake.nix  justfile
.github/workflows/: check.yaml
cli/: Cargo.toml  README.md
cli/src/: main.rs
src/: letters.rs  lib.rs  valid_words.rs  wordle.rs
web/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  main.css  main.scss
web/src/: board.rs  keyboard.rs  main.rs  misc.rs
