[package]
name = "wordle"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/DoctorDalek1963/wordle"
license = "MIT"

[[bin]]
name = "wordle-cli"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.3.0"
rand = "0.8.5"
termion = "1.5.6"
thiserror = "1.0.35"
