[package]
name = "wordle-web"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
wordle = { path = ".." }
rand = "0.8.5"

getrandom = { version = "0.2", features = ["js"] }
yew = "0.19"
web-sys = { version = "0.3.60", features = ["Document", "DomTokenList", "Element", "HtmlElement", "Storage"] }
