[package]
name = "wordle-web"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
wordle = { path = ".." }

getrandom = { version = "0.2", features = ["js"] }
gloo-events = "0.1.2"
gloo-timers = "0.2.4"
gloo-utils = "0.1.5"
js-sys = "0.3.60"
wasm-bindgen = "=0.2.92"
web-sys = { version = "0.3.60", features = ["DomTokenList"] }
yew = "0.19"
